# isaac_sim_test

./: .env  README.md  advanced_franka_pick_place_banana.py  bare_franka.py  basic_robot.py  capture_utils.py  control_franka.py  core.py  direct_franka.py  enhanced_franka_pick_place_banana.py  final_franka_pick_place_banana.py  fix_numpy_compatibility.py  franka_button_control.py  franka_control.py  franka_control.py.bak  franka_control_4_5.py  franka_interactive.py  franka_interactive_control.py  franka_keyboard_control.py  franka_pick_place_banana.py  franka_ui_control.py  franka_with_control.py  improved_final_franka_pick_place_banana.py  improved_franka_pick_place_banana.py  list_scene_objects.py  minimal_franka.py  optimized_franka_pick_place.py  program_controlled.py  pyproject.toml  robot_movements.py  run_pick_place.py  simple_franka.py
scenes/: franka_blocks_manual.usd  franka_room.usd
